--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vuepic/vue-datepicker": "^4.2.2",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
